frontend/test/should_fail/index_exec_loop_edge_fromIndexMultipleFromTo_index2_mismatch.grg
#using "index_exec_multiple_model.gm"

sequence s(j:int)
{
	for{e:AEdge in edgesFromIndexMultipleFromTo(bari, j, j + 1, fooi, 0, 42); true }
}